<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonToVoltar3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/textCenario3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cenario3"
        />

    <TextView
        android:id="@+id/textEnviarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCenario3"
        android:layout_centerHorizontal="true"
        android:text="@string/enviarFoto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonToFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonToVoltar3"
        android:layout_below="@+id/textEnviarFoto"
        android:layout_marginTop="104dp"
        android:text="@string/foto" />

    <Button
        android:id="@+id/btEnviarFoto"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonToFoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/btenviarURL" />
 
</RelativeLayout>